# FastAPI

./: README.md
Getting-started/: README.md  main.py  pyproject.toml
Login-Signup-App/: main.py  pyproject.toml
Login-Signup-App/App/: AuthService.py  Database.py  Model.py  Route.py
Login-Signup-App/App/Utils/: JWTUtils.py  PasswordUtils.py
PasswordHasher/: Service.py  main.py  pyproject.toml
RAG-Pipeline/: main.py  pyproject.toml
RAG-Pipeline/app/config/: directoryConfig.py
RAG-Pipeline/app/router/: fileRouter.py  ragRouter.py
RAG-Pipeline/app/service/: fileService.py  ragService.py
RAG-Pipeline/app/util/: fileUtils.py  ragUtils.py
SQLAlchemyDemo/: main.py  pyproject.toml
SQLAlchemyDemo/App/: DTOs.py  Database.py  Dependencies.py  RunOnce.py  model.py
ToDo-App/: main.py  pyproject.toml
ToDo-App/Models/: TodoModel.py
ToDo-App/Routes/: TodoRoutes.py
ToDo-App/Service/: TodoService.py
