[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.4",
    "docx2txt>=0.9",
    "fastapi>=0.121.1",
    "langchain-chroma>=1.0.0",
    "langchain-huggingface>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "pypdf>=6.2.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
